# SDWE_forecasts_analysis

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
clima/poc/: pyproject.toml
clima/poc/poc/: analysis.py
data/: get_from_ecmwf.py  params.json
poc/: analysis.py
