[tool.poetry]
name = "clima"
version = "0.1.0"
description = ""
authors = ["windsor718 <yuta@mcdigital.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
seaborn = "^0.11.1"
ecmwf-api-client = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
